Composant 'collapse': Correction du 'border-radius' (25px) en version tablette & desktop

--- a/src/components/collapse/index.css
+++ b/src/components/collapse/index.css
@@ -2,7 +2,7 @@
 	margin: auto;
 	margin-bottom: 30px;
 	background-color: #F6F6F6;
-	border-radius: 18px 18px 5px 5px;
+	border-radius: 18px;
 	overflow:hidden;
 	min-height: 56px;
 }
